Refactor cursor policy registration and improve view initialization; add utility for namespaced IDs